amount and percentage masking and added entity name header

--- a/src/app/views/agent/agent-notes/all-notes/all-notes.component.html
+++ b/src/app/views/agent/agent-notes/all-notes/all-notes.component.html
@@ -1,4 +1,4 @@
-<div class="tab-content">
+<div class="container tab-content">
   <div id="allNotesId" class="tab-pane fade in active" style="overflow: hidden">
     <div class="clearfix paddingTop10"></div>
     <ul>
