--- a/src/app/views/agent/agent-notes/my-notes/my-notes.component.html
+++ b/src/app/views/agent/agent-notes/my-notes/my-notes.component.html
@@ -1,4 +1,4 @@
-<div class="tab-content">
+<div class="container tab-content">
 
   <div id="allNotesId" class="tab-pane fade in active" style="overflow: hidden">
 
@@ -30,8 +30,8 @@
             </div>
             <div class="col-xs-6 col-md-6 noPadding">
               <div class="ag-detail-icons textRight">
-                <a alt=""  data-toggle="modal" data-target="#updateNewNotes" (click)="onEditClick(item,i)"><img src="../../../../../images/ic_note_edit.svg" alt=""
-                    >
+                <a alt="" data-toggle="modal" data-target="#updateNewNotes" (click)="onEditClick(item,i)"><img
+                    src="../../../../../images/ic_note_edit.svg" alt="">
                   Edit</a>
               </div>
             </div>
@@ -50,5 +50,6 @@
   </div>
   <div id="ratioView">{{totalAndCurrentRowsRatio}}</div>
 
-  <button (click)="topFunction()" id="myBtn" title="Go to top"><span class="glyphicon glyphicon-arrow-up"></span></button>
+  <button (click)="topFunction()" id="myBtn" title="Go to top"><span
+      class="glyphicon glyphicon-arrow-up"></span></button>
 </div>
