--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid nospace">
-  <div class="container nav-bg">
-    <div class="row">
+  <div class="nav-bg wrapper-back">
+    <div id="detail-page-header">
       <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
       <div class="col-xs-8 text-center">
         <h1 class="t-agent">Associates</h1>
@@ -8,8 +8,9 @@
       <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
           data-target="#recentAssociatesl"><img src="../../../..//images/baseline-history.svg" alt=""></a></div>
     </div>
+    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
-  <div class="container app-bg2">
+  <div class="container app-bg2 bottom-wrapper-for-back">
     <div class="row">
 
       <ul>
@@ -17,7 +18,7 @@
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail-associates">
               <div class="dp">
-                <img src="../../../../images/ic_note_profile.svg" alt="" (click)="onPersonClick(item)"/>
+                <img src="../../../../images/ic_note_profile.svg" alt="" (click)="onPersonClick(item)" />
                 <div class="dpProfile_wp proActiBg">A</div>
               </div>
               <h4>{{item.dispname}} <span>({{item.personID}})</span></h4> <span>{{getAddress(item)}}</span> <span
