--- a/src/app/views/agent/agent-notes/agent-notes.component.html
+++ b/src/app/views/agent/agent-notes/agent-notes.component.html
@@ -1,19 +1,19 @@
 <div class="container-fluid nospace">
-  <div class="container nav-bg">
-    <div class="row">
+  <div class="nav-bg wrapper-back">
+    <div id="detail-page-header">
 
       <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
       <div class="col-xs-7 text-center">
         <h1 class="t-agent">Notes</h1>
       </div>
-      <div class="col-xs-3 text-center tpad"><img src="../../../../images/add_new.svg" alt=""><br><span class="edit-detail"><a
-            data-toggle="modal" data-target="#addNewNotes">Add
+      <div class="col-xs-3 text-center tpad"><img src="../../../../images/add_new.svg" alt=""><br><span
+          class="edit-detail"><a data-toggle="modal" data-target="#addNewNotes">Add
             New</a></span></div>
     </div>
-
+    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
 
-  <div style="background: #F2F2F2">
+  <div class="bottom-wrapper-for-back" style="background: #F2F2F2">
 
     <mat-tab-group mat-align-tabs="center" animationDuration="500ms" (selectedTabChange)="onTabSelect($event)">
       <mat-tab label="All Notes">
