--- a/src/app/views/person/person-agents/person-agents.component.html
+++ b/src/app/views/person/person-agents/person-agents.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid nospace">
-  <div class="container nav-bg">
-    <div class="row">
+  <div class="nav-bg wrapper-back">
+    <div id="detail-page-header">
       <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
       <div class="col-xs-8 text-center">
         <h1 class="t-agent">Agents</h1>
@@ -8,9 +8,10 @@
       <div class="col-xs-2 text-right toppad"><a (click)="onRecentProfileClick()" alt="" data-toggle="modal"
           data-target="#recentAssociatesl"><img src="../../../..//images/baseline-history.svg" alt=""></a></div>
     </div>
+    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
   </div>
 
-  <div class="container app-bg2">
+  <div class="container app-bg2 bottom-wrapper-for-back">
     <div class="row">
       <ul>
         <li *ngFor="let item of personAgentsModels">
