--- a/src/app/views/agent/agent-associates/agent-associates.component.html
+++ b/src/app/views/agent/agent-associates/agent-associates.component.html
@@ -25,7 +25,7 @@
                 class="date">{{item.effectiveDate}}</span>
               <div class="clearfix"></div>
               <div class="row">
-                <div class="col-md-12 col-xs-12" *ngIf="entityInfo.type == P">
+                <div class="col-md-12 col-xs-12" *ngIf="entityModel.type == P">
                   <div class="associatAgentName"><img src="../../../../images/baseline-business-24px.svg" alt="" />
                     <span>{{item.agentname}}</span></div>
                 </div>
