--- a/src/app/views/agent/contact-detail/contact-detail.component.html
+++ b/src/app/views/agent/contact-detail/contact-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid nospace">
-  <div class="container nav-bg">
-    <div class="row">
+  <div class="nav-bg wrapper-back">
+    <div id="detail-page-header">
 
       <div class="col-xs-2 toppad"><img src="../../../../images/back-btn.svg" alt="" (click)="goBack()"></div>
       <div class="col-xs-7 text-center">
@@ -9,9 +9,9 @@
       <div class="col-xs-3 text-center tpad" data-toggle="modal" data-target="#myModal" (click)="onEditProfileClick()">
         <img src="../../../../images/edit.svg" alt=""><br><span class="edit-detail"><a>Edit Details</a></span></div>
     </div>
-
-  </div>
-  <div class="container app-bg2">
+    <app-entity-name-header [entityModel]="entityModel"></app-entity-name-header>
+  </div> 
+  <div class="container app-bg2 bottom-wrapper-for-back">
     <div class="row">
       <div class="col-xs-12 col-md-6 cell-bg">
         <div class="col-xs-6 col-md-6 noPadding">
