--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -316,6 +316,11 @@ ul.agent-details li.agents a {
   padding-left: 5px;
 }
 
+.card img{
+  height: 20px;
+  width: 20px;
+}
+
 .header-div {
   margin-left: auto;
   margin-right: auto;
