--- a/src/app/views/entity/entity-alert-detail/entity-alert-detail.component.html
+++ b/src/app/views/entity/entity-alert-detail/entity-alert-detail.component.html
@@ -111,7 +111,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-12 noPadding">
         <div class="buttonFooter_wp">
-          <button type="button" class="btn btn-primary footerBtn" data-toggle="modal" data-target="#markAlert">
+          <button type="button" class="btn btn-primary footerBtn" (click)="onMarkAsReviewedClick()">
             <img src="images/ic_objective_complete.svg" alt=""> Make as Reviewed
           </button>
         </div>
@@ -119,4 +119,4 @@
     </div>
   </div>
 </div>
-<app-mark-as-reviewed-dialog></app-mark-as-reviewed-dialog>
+<!-- <app-mark-as-reviewed-dialog></app-mark-as-reviewed-dialog> -->
