--- a/src/app/views/entity/audits/audits.component.html
+++ b/src/app/views/entity/audits/audits.component.html
@@ -14,12 +14,13 @@
   <div class="container app-bg5 bottom-wrapper-for-back">
     <div class="row marginTop20">
       <ul>
-        <li *ngFor="let item of auditsModels" (click)="onClaimSelected(item)">
+        <li *ngFor="let item of auditsModels" (click)="onAuditSelected(item)">
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail ag-perform">
               <h4 class="paddingBottom5">{{item.stat}} <span
                   class="textRight fontBold">{{item.stat=='Completed'?'Finish Date:':'Scheduled Date:'}}</span><br /><span
-                  class="textRight">{{item.stat=='Completed'?item.auditFinishDate:item.schedFinishDate}}</span></h4>
+                  class="textRight">{{getFormattedDate(item.stat=='Completed'?item.auditFinishDate:item.schedFinishDate)}}</span>
+              </h4>
               <span class="textDoller">{{item.auditType}}</span>
               <div class="clearfix"></div>
               <div class="paddingTop10"></div>
