fixed prod build issues

--- a/src/app/customUI/dialogs/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/customUI/dialogs/confirmation-dialog/confirmation-dialog.component.html
@@ -9,7 +9,7 @@
 </mat-dialog-content>
 <mat-dialog-actions id="DialogButtonGroup" align="end">
   <button matDialogClose="cancel" class="dialogNo" (click)="onNoClick()"
-    [mat-dialog-close]="no">{{data.noText}}</button>
+    >{{data.noText}}</button>
   <button matDialogClose="confirm" class="dialogYes" (click)="onYesClick()"
-    [mat-dialog-close]="yes">{{data.yesText}}</button>
+    >{{data.yesText}}</button>
 </mat-dialog-actions>
