--- a/src/app/customUI/dialogs/forgot-password/forgot-password-alert.component.html
+++ b/src/app/customUI/dialogs/forgot-password/forgot-password-alert.component.html
@@ -6,6 +6,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button matDialogClose="confirm" (click)="onYesClick()" [mat-dialog-close]="yes">YES</button>
-  <button matDialogClose="cancel" (click)="onNoClick()" [mat-dialog-close]="no">NO</button>
+  <button matDialogClose="confirm" (click)="onLoginClick()">YES</button>
+  <button matDialogClose="cancel" (click)="onNoClick()">NO</button>
 </mat-dialog-actions>
