--- a/src/app/views/person/person-detail/person-detail.component.html
+++ b/src/app/views/person/person-detail/person-detail.component.html
@@ -8,7 +8,7 @@
         </div>
         <h4>{{personInfo.name}}<a><img
               src="{{checkEntityFavorite()?'../../../../images/favourite-icon.svg':'../../../../images/star.svg'}}"
-              alt="" (click)="onStarClick(item)"></a></h4> <span
+              alt="" (click)="onStarClick()"></a></h4> <span
           class="building-icon padding-left-twenty-five">{{personInfo.entityId}}</span>
         <div class="clearfix"></div>
         <!-- <div class="amount bx1"><span>Net Premium</span><br>$ {{agentInfo.netPermium}}</div>
