--- a/src/app/customUI/dialogs/claims-filter/claims-filter.component.html
+++ b/src/app/customUI/dialogs/claims-filter/claims-filter.component.html
@@ -25,7 +25,7 @@
             </div>
             <div class="col-md-6 col-xs-6">
               <div class="checkbox">
-                <input id="checkbox2" type="checkbox" [(ngModel)]="isClosedChecked" (change)="closeCheckChanged($event)" [ngModelOptions]="{standalone: true}">
+                <input id="checkbox2" type="checkbox" [(ngModel)]="isClosedChecked" (change)="closedCheckChanged($event)" [ngModelOptions]="{standalone: true}">
                 <label class="rememberM" for="checkbox2">Closed</label>
               </div>
             </div>
