--- a/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
+++ b/src/app/views/dashboard/navigation-drawer/navigation-drawer.component.html
@@ -51,5 +51,5 @@
 
     <app-recent-profile-dialog></app-recent-profile-dialog>
     <app-search-filter></app-search-filter>
-    <router-outlet (pageNameEvent)="receivePageName($event)"></router-outlet>
+    <router-outlet></router-outlet>
   </div>
