--- a/src/cssFiles/custom.css
+++ b/src/cssFiles/custom.css
@@ -340,6 +340,26 @@ ul.agent-details li.agents a {
 }
 
 .mat-dialog-container {
-  display: inherit !important;
-  background: transparent !important;
+  /* display: inherit !important;
+  background: transparent !important; */
+  height: inherit !important;
+  width: 95% !important;
+}
+
+#MarkAsReviewedDialogButtonGroup {
+  text-align: right;
+}
+
+#MarkAsReviewedDialogButtonGroup button {
+  font-weight: 600;
+  border: 0px solid rgb(177, 119, 76);
+  padding: 2px 20px 2px 5px;
+  margin: 0px 5px 0px;
+  background-color: transparent;
+  color: #F68933;
+  font-size: 15px;
+}
+
+.mat-dialog-content {
+  padding: 0px !important;
 }
