--- a/src/app/customUI/dialogs/mark-as-reviewed-dialog/mark-as-reviewed-dialog.component.html
+++ b/src/app/customUI/dialogs/mark-as-reviewed-dialog/mark-as-reviewed-dialog.component.html
@@ -31,8 +31,8 @@
   </div>
 </mat-dialog-content>
 <mat-dialog-actions id="MarkAsReviewedDialogButtonGroup" align="end">
-  <button matDialogClose="cancel" (click)="onNoClick()">Cancel</button>
-  <button matDialogClose="confirm" (click)="onYesClick()">Mark as Reviewed</button>
+  <button matDialogClose="cancel" (click)="onCancelClick()">Cancel</button>
+  <button matDialogClose="confirm" (click)="onMarkAsReviewClick()">Mark as Reviewed</button>
 </mat-dialog-actions>
 
 
