--- a/src/app/views/entity/audit-detail-queued/audit-detail-queued.component.html
+++ b/src/app/views/entity/audit-detail-queued/audit-detail-queued.component.html
@@ -27,7 +27,8 @@
             </div>
 
             <div class="col-md-3 col-xs-3" style="padding-left:0;">
-              <button type="button" class="btn btn-primary button" (click)="onSendEmailConfirmationClick()" style="width:64px;height:34px; margin-top:15px;">
+              <button type="button" class="btn btn-primary button" (click)="onSendEmailConfirmationClick()"
+                style="width:64px;height:34px; margin-top:15px;">
                 <img src="../../../../images/assigned_icon.svg" alt=""></button>
             </div>
 
@@ -82,7 +83,7 @@
     <div class="row">
       <div class="col-xs-12 col-md-12 noPadding positionFixed">
         <div class="buttonFooter_wp">
-          <button type="button" class="btn btn-primary footerBtn btnInactive">
+          <button type="button" class="btn btn-primary footerBtn btnInactive" (click)="onDownloadPdfClick()">
             <img src="../../../../images/ic_pdf_common-2.svg" alt=""> Download Audit Details PDF
           </button>
         </div>
