--- a/src/app/views/entity/claims-detail/claims-detail.component.html
+++ b/src/app/views/entity/claims-detail/claims-detail.component.html
@@ -181,8 +181,8 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12 col-md-12 noPadding">
-        <div class="buttonFooter_wp"><button type="button" class="btn btn-primary footerBtn" data-toggle="modal"
-            data-target="#downLoadPdfPopup">
+        <div class="buttonFooter_wp"><button type="button" class="btn btn-primary footerBtn"
+            (click)="onDownloadPdfClick()">
             <img src="../../../../images/ic_pdf_common.svg" alt=""> DownLoad PDF
           </button>
         </div>
