--- a/src/app/views/entity/compliance/compliance.component.html
+++ b/src/app/views/entity/compliance/compliance.component.html
@@ -13,7 +13,7 @@
   <div class="container app-bg5 bottom-wrapper-for-back">
     <div class="row marginTop20">
       <ul>
-        <li *ngFor="let item of complianceModels">
+        <li *ngFor="let item of complianceModels" (click)="onComplianceClick(item)">
           <div class="col-xs-12 col-md-6 cell-bg">
             <div class="agent-detail openAlert">
               <h4>{{item.reqdesc}}<span><img
@@ -22,8 +22,8 @@
               <div class="clear"></div>
               <div class="paddingTop10"></div>
               <div class="statusInd_wp"
-                [ngClass]="{'bgGreen':item.comstat=='G','bgYellow':item.comstat=='Y','bgRed':item.comstat=='R'}">
-                {{item.comstat}}</div>
+                [ngClass]="{'bgGreen':item.comstat=='Green','bgYellow':item.comstat=='Yellow','bgRed':item.comstat=='Red'}">
+                {{item.comstat | slice:0:1}}</div>
               <span>{{item.stat}}</span>
               <span class="expDate">Expiration Date:{{item.expirationDate | slice:0:10}}</span>
               <div class="clear"></div>
