working on user config api integration

--- a/src/app/customUI/dialogs/assigned-to/assigned-to.component.html
+++ b/src/app/customUI/dialogs/assigned-to/assigned-to.component.html
@@ -1,38 +1,34 @@
-<div class="modal fade" id="assignedToPopup" role="dialog">
-  <div class="modal-dialog" style="margin-top:20%;">
-
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Email "Cynthia Morales"</h4>
-      </div>
-      <form role="form">
-        <div class="modal-body">
-
-          <div class="clear paddingTop10"></div>
-
-          <div class="form-group">
-            <p class="markAlertMsg">You'll be emailing the person assigned to this claim and will be taken to your
-              default mail client. Are you sure you want to email the auditor?</p>
-          </div>
-
-          <div class="col-xs-12 col-md-12 noPadding">
-            <div class="checkbox">
-              <input id="checkbox1" type="checkbox">
-              <label class="rememberM" for="checkbox1">Don't show me again</label>
-            </div>
-          </div>
-
-          <div class="clear paddingTop10"></div>
-
-        </div>
-        <div class="modal-footer">
-          <a href="#" data-dismiss="modal" alt="Cancel"><span>Cancel</span></a>
-          <a href="#" data-dismiss="modal" alt="Save Changes">Email the Assigned</a>
-        </div>
-      </form>
+<mat-dialog-content id="materialDialog">
+  <!-- Modal content-->
+  <div>
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal">&times;</button>
+      <h4 class="modal-title">Email "{{data.name}}"</h4>
     </div>
+    <form role="form">
+      <div class="modal-body">
 
+        <div class="clear paddingTop10"></div>
+
+        <div class="form-group">
+          <p class="markAlertMsg">You'll be emailing the person assigned to this claim and will be taken to your
+            default mail client. Are you sure you want to email the auditor?</p>
+        </div>
+
+        <div class="col-xs-12 col-md-12 noPadding">
+          <div class="checkbox">
+            <input id="checkbox1" type="checkbox">
+            <label class="rememberM" for="checkbox1">Don't show me again</label>
+          </div>
+        </div>
+
+        <div class="clear paddingTop10"></div>
+
+      </div>
+    </form>
   </div>
-</div>
+</mat-dialog-content>
+<mat-dialog-actions id="MarkAsReviewedDialogButtonGroup" align="end">
+  <button matDialogClose="cancel" (click)="onCancelClick()">Cancel</button>
+  <button matDialogClose="confirm" (click)="onEmailTheAssignedClick()">Email the Assigned</button>
+</mat-dialog-actions>
