--- a/src/app/customUI/dialogs/download-pdf/download-pdf.component.html
+++ b/src/app/customUI/dialogs/download-pdf/download-pdf.component.html
@@ -3,7 +3,7 @@
   <div>
     <div class="modal-header">
       <button type="button" class="close" (click)="onCancelClick()">&times;</button>
-      <h4 class="modal-title">Download the Claim Details PDF</h4>
+      <h4 class="modal-title">{{title}}</h4>
     </div>
     <form role="form">
       <div class="modal-body">
