--- a/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
@@ -3,22 +3,18 @@
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel1">Default Home Screen:</label>
-        <select class="form-control" id="sel1">
-          <option>Select</option>
-          <option selected="selected">Top Agents</option>
-          <option></option>
-          <option></option>
+        <select class="form-control" id="sel1" formControlName="selectedHomeScreen"
+          (change)="onHomeScreenChanged($event)">
+          <option [value]="i.path" *ngFor="let i of homeScreenArray">{{i.name}}</option>
         </select>
       </div>
     </div>
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel2">Numberof items to load at once:</label>
-        <select class="form-control" id="sel1">
-          <option>Select</option>
-          <option selected="selected">5 items</option>
-          <option></option>
-          <option></option>
+        <select class="form-control" id="sel1" formControlName="selectedBatchSize"
+          (change)="onBatchSizeChanged($event)">
+          <option [value]="i" *ngFor="let i of batchSizeArray">{{i}}</option>
         </select>
       </div>
     </div>
@@ -26,22 +22,16 @@
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel3">Search by default In:</label>
-        <select class="form-control" id="sel1">
-          <option>Select</option>
-          <option selected="selected">Search in All</option>
-          <option></option>
-          <option>-</option>
+        <select class="form-control" id="sel1" formControlName="selectedSearchIn" (change)="onSearchInChanged($event)">
+          <option [value]="i" *ngFor="let i of searchInArray">{{i}}</option>
         </select>
       </div>
     </div>
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel4">Use following feed for news</label>
-        <select class="form-control" id="sel1">
-          <option>Select</option>
-          <option selected="selected">Google News</option>
-          <option></option>
-          <option></option>
+        <select class="form-control" id="sel1" formControlName="selectedNewsFeed" (change)="onNewsFeedChanged($event)">
+          <option [value]="i" *ngFor="let i of newsArray">{{i}}</option>
         </select>
       </div>
     </div>
@@ -52,8 +42,8 @@
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel1">Reorder Functionality for Sections:</label>
-        <button type="button" class="btn btn-light" (click)="rearrangeHomeModules()">Rearrange Home Modules <img src="../../../../../images/arrow-icon.png"
-            align="right" alt=""></button>
+        <button type="button" class="btn btn-light" (click)="rearrangeHomeModules()">Rearrange Home Modules <img
+            src="../../../../../images/arrow-icon.png" align="right" alt=""></button>
         <button type="button" class="btn btn-light">Rearrange Person Section
           <img src="../../../../../images/arrow-icon.png" align="right" alt=""></button>
         <button type="button" class="btn btn-light" (click)="rearrangeAgentDetailModules()">Rearrange Agent Section
