--- a/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
+++ b/src/app/views/dashboard/ProfileAndSetting/app-setting/app-setting.component.html
@@ -1,18 +1,18 @@
-<form role="form" class="app-bg3">
+<form role="form" [formGroup]="appSettingForm" class="app-bg3">
   <div class="row paddingTop15">
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel1">Default Home Screen:</label>
-        <select class="form-control" id="sel1" 
+        <select class="form-control" id="sel1" formControlName="selectedHomeScreen"
           (change)="onHomeScreenChanged($event)">
-          <option [value]="i.path" *ngFor="let i of homeScreenArray">{{i.name}}</option>
+          <option [value]="i.name" *ngFor="let i of homeScreenArray">{{i.name}}</option>
         </select>
       </div>
     </div>
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel2">Numberof items to load at once:</label>
-        <select class="form-control" id="sel1" 
+        <select class="form-control" id="sel1" formControlName="selectedBatchSize"
           (change)="onBatchSizeChanged($event)">
           <option [value]="i" *ngFor="let i of batchSizeArray">{{i}}</option>
         </select>
@@ -22,7 +22,7 @@
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel3">Search by default In:</label>
-        <select class="form-control" id="sel1"  (change)="onSearchInChanged($event)">
+        <select class="form-control" id="sel1" formControlName="selectedSearchIn" (change)="onSearchInChanged($event)">
           <option [value]="i" *ngFor="let i of searchInArray">{{i}}</option>
         </select>
       </div>
@@ -30,7 +30,7 @@
     <div class="col-xs-12 col-md-6">
       <div class="form-group">
         <label for="sel4">Use following feed for news</label>
-        <select class="form-control" id="sel1"  (change)="onNewsFeedChanged($event)">
+        <select class="form-control" id="sel1" formControlName="selectedNewsFeed" (change)="onNewsFeedChanged($event)">
           <option [value]="i" *ngFor="let i of newsArray">{{i}}</option>
         </select>
       </div>
